syntax = "proto3";

option java_package = "com.bron.grpc";
option java_multiple_files = true;


service touchFreeATM{
rpc authenticateCard (inputPin) returns (authenticationMessage) {}

rpc findNearByATM (searchATM) returns (stream availableMachines) {}
}

//rpc 1: authenticateCard
message authenticationMessage{
	bool isCorrectPin = 1;
	string welcomeMessage = 2;
}

message inputPin{
	int32 pinNumber = 1;
}

//rpc 2: authenticateCard
message searchATM{
	bool searchATM = 1;
}

message availableMachines {
	string Machine = 1;
	float distance =2;
}